# OMO-Switch

./: .gitignore  APPLE_SIGNING_GUIDE.md  LICENSE  README.md  README_EN.md  README_JP.md  README_KR.md  README_TW.md  package-lock.json  package.json  开发进度.md
.github/workflows/: release.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: omo-model-switcher.md
.sisyphus/notepads/fix-dialog-crash/: learnings.md
.sisyphus/plans/: fix-dialog-crash.md  omo-model-switcher.md
icons/: icon.icns
omo-model-switcher/: .gitignore  README.md  README_JP.md  README_TW.md  index.html  package-lock.json  package.json
omo-model-switcher/src/: App.tsx  main.tsx
omo-model-switcher/src-tauri/: Cargo.toml  tauri.conf.json
omo-model-switcher/src-tauri/icons/: icon.icns
omo-model-switcher/src-tauri/src/: main.rs
omo-model-switcher/src-tauri/src/commands/: config_commands.rs  i18n_commands.rs  mod.rs  preset_commands.rs  version_commands.rs
omo-model-switcher/src-tauri/src/services/: config_service.rs  import_export_service.rs  mod.rs  model_service.rs  preset_service.rs  version_service.rs
omo-model-switcher/src/pages/: AgentPage.tsx  (+5 more)
src/: App.css  App.tsx  i18n.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/presets/: providers.json
src-tauri/src/: i18n.rs  main.rs  tray.rs
src/hooks/: useConfigChangeDetection.ts
src/locales/: en.json  ja.json  ko.json  zh-CN.json  zh-TW.json
src/pages/: AgentPage.tsx  ConfigPage.tsx  ImportExportPage.tsx  ModelsPage.tsx  ProviderPage.tsx  SettingsPage.tsx
src/services/: tauri.ts
src/store/: configStore.ts  modelStore.ts  preloadStore.ts  presetStore.ts  uiStore.ts  updaterStore.ts
src/utils/: tauri.ts
(+72 files in other folders)
