[package]
name = "omo-model-switcher"
version = "0.1.0"
description = "OMO Model Switcher Desktop Application"
authors = ["OMO Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
