[package]
name = "omo-model-switcher"
version = "0.1.0"
description = "OMO Model Switcher Desktop Application"
authors = ["OMO Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
ureq = { version = "2", features = ["json"] }
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
